# gameprices

./: .gitignore  .travis.yml  CONTRIBUTING.md  Makefile  README.md  alert_deal_containers.csv  alerts.csv  example.sh  mailconfig.json_example  psncli.py  psndealsmailalert.py  psnmailalert.py  psnpricealert.py  setup.cfg  setup.py  test_requirements.txt
.github/workflows/: build.yaml
cli/: alerts_example.csv  psndealsmailalert.py
gameprices/: __init__.py  offer.py  price.py  shop.py
gameprices/cli/: cli.py  mailalert.py  psndealsmailalert.py
gameprices/shops/: eshop.py  psn.py
gameprices/test/: commons.py  test_cli.py  test_dealmailalert.py  test_eshop.py  test_psn.py  test_utils.py
gameprices/utils/: utils.py
psn/: psn.py
psnpricealert/: __init__.py  psncli.py
psnpricealert/psn/: psn.py
psnpricealert/test/: test_psn.py
psnpricealert/utils/: utils.py
psnprices/: __init__.py  offer.py  shop.py
psnprices/cli/: psncli.py  psndealsmailalert.py  psnmailalert.py
psnprices/shops/: eshop.py  psn.py
psnprices/test/: commons.py  test_dealmailalert.py  test_eshop.py  test_psn.py
psnprices/utils/: utils.py
utils/: utils.py
