[metadata]
description-file = README.md

[aliases]
test=pytest

[tool:pytest]
# addopts = -d --tx socket=192.168.178.87:9999 --rsyncdir gameprices gameprices --pep8 --spec --instafail --cov=gameprices --cov-report html gameprices/test 
addopts = --rsyncdir gameprices gameprices --spec --instafail --cov=gameprices --cov-report html gameprices/test 